--- a/openshift/dgraph-alpha.yaml
+++ b/openshift/dgraph-alpha.yaml
@@ -19,7 +19,7 @@ objects:
   - apiVersion: v1
     kind: Service
     metadata:
-      name: dgraph-alpha-public
+      name: alpha-public
       labels:
         app: dgraph
         component: alpha
@@ -28,7 +28,7 @@ objects:
       ports:
         - port: 8080
           targetPort: 8080
-          name: alpha-http
+          name: alpha-rest
         - port: 9080
           targetPort: 9080
           name: alpha-grpc
@@ -42,24 +42,25 @@ objects:
   - apiVersion: v1
     kind: Service
     metadata:
-      name: dgraph-alpha-0-http-public
+      name: alpha-0-rest-public
       labels:
-        app: dgraph-alpha
+        app: dgraph
+        component: alpha
     spec:
       type: LoadBalancer
       ports:
         - port: 8080
           targetPort: 8080
-          name: alpha-http
+          name: alpha-rest
       selector:
-        statefulset.kubernetes.io/pod-name: dgraph-alpha-0
+        statefulset.kubernetes.io/pod-name: alpha-0
 
   # This is a headless service which is necessary for discovery for a dgraph-alpha StatefulSet.
   # https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/#creating-a-statefulset
   - apiVersion: v1
     kind: Service
     metadata:
-      name: dgraph-alpha
+      name: alpha
       labels:
         app: dgraph
         component: alpha
@@ -77,12 +78,12 @@ objects:
   - apiVersion: apps/v1
     kind: StatefulSet
     metadata:
-      name: dgraph-alpha
+      name: alpha
       labels:
         app: dgraph
         component: alpha
     spec:
-      serviceName: "dgraph-alpha"
+      serviceName: alpha
       replicas: 3
       selector:
         matchLabels:
@@ -104,7 +105,7 @@ objects:
                         - key: app
                           operator: In
                           values:
-                            - dgraph-alpha
+                            - alpha
                     topologyKey: kubernetes.io/hostname
           # Initializing the Alphas:
           #
@@ -155,7 +156,7 @@ objects:
                 - containerPort: 7080
                   name: alpha-grpc-int
                 - containerPort: 8080
-                  name: alpha-http
+                  name: alpha-rest
                 - containerPort: 9080
                   name: alpha-grpc
               volumeMounts:
@@ -169,14 +170,14 @@ objects:
                   valueFrom:
                     fieldRef:
                       fieldPath: metadata.namespace
-                - name: OPS_WHITELIST
+                - name: ADMIN_WHITELIST_IPS
                   value: "172.54.0.0:172.54.255.255"
               command:
                 - bash
                 - "-c"
                 - |
                   set -ex
-                  dgraph alpha --my=$(hostname -f):7080 --lru_mb 7680 --zero dgraph-zero-0.dgraph-zero.${POD_NAMESPACE}.svc.cluster.local:5080 --tls_dir /var/run/secrets/dgraph --whitelist ${OPS_WHITELIST}
+                  dgraph alpha --my=$(hostname -f):7080 --lru_mb 7680 --zero zero-0.zero.${POD_NAMESPACE}.svc.cluster.local:5080 --tls_dir /var/run/secrets/dgraph --whitelist ${ADMIN_WHITELIST_IPS}
               resources:
                 limits:
                   cpu: 4000m
@@ -199,11 +200,71 @@ objects:
         - metadata:
             name: datadir
             annotations:
-              volume.alpha.kubernetes.io/storage-class: anything # ceph-dyn-thoth-paas-prod-psi
-              # volume.beta.kubernetes.io/storage-provisioner: kubernetes.io/rbd
+#              volume.alpha.kubernetes.io/storage-class: ceph-dyn-thoth-paas-prod-psi
+#              volume.beta.kubernetes.io/storage-provisioner: kubernetes.io/rbd
+            finalizers:
+              - kubernetes.io/pvc-protection
           spec:
             accessModes:
               - "ReadWriteOnce"
             resources:
               requests:
                 storage: 5Gi
+#            storageClassName: ceph-dyn-thoth-paas-prod-psi
+
+  - apiVersion: route.openshift.io/v1
+    kind: Route
+    metadata:
+      labels:
+        app: dgraph
+        component: alpha
+      name: alpha-0-rest
+    spec:
+      host: alpha-0-thoth-test-core.cloud.paas.psi.redhat.com
+      port:
+        targetPort: alpha-rest
+      tls:
+        termination: passthrough
+      to:
+        kind: Service
+        name: alpha-0-rest-public
+        weight: 100
+      wildcardPolicy: None
+
+  - apiVersion: route.openshift.io/v1
+    kind: Route
+    metadata:
+      labels:
+        app: dgraph
+        component: alpha
+      name: alpha-rest
+    spec:
+      host: alpha-thoth-test-core.cloud.paas.psi.redhat.com
+      port:
+        targetPort: alpha-rest
+      tls:
+        termination: passthrough
+      to:
+        kind: Service
+        name: alpha-public
+        weight: 100
+      wildcardPolicy: None
+
+  - apiVersion: route.openshift.io/v1
+    kind: Route
+    metadata:
+      labels:
+        app: dgraph
+        component: alpha
+      name: alpha-grpc
+    spec:
+      host: alpha-grpc-thoth-test-core.cloud.paas.psi.redhat.com
+      port:
+        targetPort: alpha-grpc
+      tls:
+        termination: passthrough
+      to:
+        kind: Service
+        name: alpha-public
+        weight: 100
+      wildcardPolicy: None
