--- a/openshift/dgraph-ratel.yaml
+++ b/openshift/dgraph-ratel.yaml
@@ -2,9 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dgraph-ratel-public
+  name: ratel-public
   labels:
-    app: dgraph-ratel
+    app: dgraph
+    component: ratel
 spec:
   type: LoadBalancer
   ports:
@@ -12,22 +13,26 @@ spec:
     targetPort: 8000
     name: ratel-http
   selector:
-    app: dgraph-ratel
+    app: dgraph
+    component: ratel
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dgraph-ratel
+  name: ratel
   labels:
-    app: dgraph-ratel
+    app: dgraph
+    component: ratel
 spec:
   selector:
     matchLabels:
-      app: dgraph-ratel
+      app: dgraph
+      component: ratel
   template:
     metadata:
       labels:
-        app: dgraph-ratel
+        app: dgraph
+        component: ratel
     spec:
       containers:
       - name: ratel
