--- a/openshift/dgraph-zero.yaml
+++ b/openshift/dgraph-zero.yaml
@@ -19,7 +19,7 @@ objects:
   - apiVersion: v1
     kind: Service
     metadata:
-      name: dgraph-zero-public
+      name: zero-public
       labels:
         app: dgraph
         component: zero
@@ -31,7 +31,7 @@ objects:
           name: zero-grpc
         - port: 6080
           targetPort: 6080
-          name: zero-http
+          name: zero-rest
       selector:
         app: dgraph
         component: zero
@@ -39,7 +39,7 @@ objects:
   - apiVersion: v1
     kind: Service
     metadata:
-      name: dgraph-zero
+      name: zero
       labels:
         app: dgraph
         component: zero
@@ -56,12 +56,12 @@ objects:
   - apiVersion: apps/v1
     kind: StatefulSet
     metadata:
-      name: dgraph-zero
+      name: zero
       labels:
         app: dgraph
         component: zero
     spec:
-      serviceName: "dgraph-zero"
+      serviceName: "zero"
       replicas: 3
       selector:
         matchLabels:
@@ -83,7 +83,7 @@ objects:
                     - key: app
                       operator: In
                       values:
-                      - dgraph-zero
+                      - zero
                   topologyKey: kubernetes.io/hostname
           containers:
           - name: zero
@@ -93,7 +93,7 @@ objects:
               - containerPort: 5080
                 name: zero-grpc
               - containerPort: 6080
-                name: zero-http
+                name: zero-rest
             volumeMounts:
               - name: datadir
                 mountPath: /dgraph
@@ -113,7 +113,7 @@ objects:
                 if [[ $ordinal -eq 0 ]]; then
                   dgraph zero --my=$(hostname -f):5080 --idx $idx --replicas 3
                 else
-                  dgraph zero --my=$(hostname -f):5080 --peer dgraph-zero-0.dgraph-zero.${POD_NAMESPACE}.svc.cluster.local:5080 --idx $idx --replicas 3
+                  dgraph zero --my=$(hostname -f):5080 --peer zero-0.zero.${POD_NAMESPACE}.svc.cluster.local:5080 --idx $idx --replicas 3
                 fi
             resources:
               limits:
@@ -132,12 +132,27 @@ objects:
       volumeClaimTemplates:
         - metadata:
             name: datadir
-            annotations:
-              volume.alpha.kubernetes.io/storage-class: anything # ceph-dyn-thoth-paas-prod-psi
-              # volume.beta.kubernetes.io/storage-provisioner: kubernetes.io/rbd
           spec:
             accessModes:
               - "ReadWriteOnce"
             resources:
               requests:
                 storage: 5Gi
+#            storageClassName: ceph-dyn-thoth-paas-prod-psi
+
+  - apiVersion: route.openshift.io/v1
+    kind: Route
+    metadata:
+      labels:
+        app: dgraph
+        component: zero
+      name: zero-rest
+    spec:
+      host: zero-rest-thoth-test-core.cloud.paas.psi.redhat.com
+      port:
+        targetPort: zero-rest
+      to:
+        kind: Service
+        name: zero-public
+        weight: 100
+      wildcardPolicy: None
