--- a/openshift/dgraph-zero.yaml
+++ b/openshift/dgraph-zero.yaml
@@ -137,10 +137,10 @@ objects:
                 fi
             resources:
               limits:
-                cpu: 750m
+                cpu: 1
                 memory: 1024Mi
               requests:
-                cpu: 750m
+                cpu: 1
                 memory: 1024Mi
           terminationGracePeriodSeconds: 60
           volumes:
