--- a/openshift/dgraph-imagestream.yaml
+++ b/openshift/dgraph-imagestream.yaml
@@ -18,9 +18,9 @@ spec:
       name: docker.io/dgraph/dgraph:v1.0.14
     referencePolicy:
       type: Local
-  - name: v1.0.15-rc1
+  - name: v1.0.15
     from:
       kind: DockerImage
-      name: docker.io/dgraph/dgraph:v1.0.15-rc1
+      name: docker.io/dgraph/dgraph:v1.0.15
     referencePolicy:
       type: Local
