--- a/openshift/dgraph-prometheus-exporter.yaml
+++ b/openshift/dgraph-prometheus-exporter.yaml
@@ -198,7 +198,7 @@ objects:
                 - name: SERVER_BIND
                   value: "0.0.0.0:8080"
                 - name: TARGETS
-                  value: "http://prometheus-exporter-zero-0.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,http://prometheus-exporter-zero-1.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,http://prometheus-exporter-zero-2.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,https://prometheus-exporter-alpha-0.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,https://prometheus-exporter-alpha-1.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,https://prometheus-exporter-alpha-2.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics"
+                  value: "http://prometheus-exporter-zero-0.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,http://prometheus-exporter-zero-1.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,http://prometheus-exporter-zero-2.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,https://prometheus-exporter-alpha-0.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,https://prometheus-exporter-alpha-1.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,https://prometheus-exporter-alpha-2.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics,https://prometheus-exporter-alpha-3.thoth-dgraph-stage.svc:8080/debug/prometheus_metrics"
                 - name: INSECURE_SKIP_VERIFY
                   value: "True"
                 - name: VERBOSE
