--- a/openshift/dgraph-ratel.yaml
+++ b/openshift/dgraph-ratel.yaml
@@ -1,43 +1,83 @@
----
-apiVersion: v1
-kind: Service
+apiVersion: template.openshift.io/v1
+kind: Template
 metadata:
-  name: ratel-public
+  name: dgraph-ratel-deployment
+  annotations:
+    description: "Dgraph Ratel deployment"
+    openshift.io/display-name: "Dgraph"
+    version: 0.1.0
+    tags: dgraph,zero,alpha,thoth
+    template.openshift.io/documentation-url: https://github.com/Thoth-Station/
+    template.openshift.io/long-description: "This is an OpenShift Template to deploy Ratel"
+    template.openshift.io/provider-display-name: "Red Hat, Inc."
   labels:
+    template: dgraph-ratel-deployment
     app: dgraph
-    component: ratel
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 8000
-    targetPort: 8000
-    name: ratel-http
-  selector:
-    app: dgraph
-    component: ratel
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: ratel
-  labels:
-    app: dgraph
-    component: ratel
-spec:
-  selector:
-    matchLabels:
-      app: dgraph
-      component: ratel
-  template:
+
+parameters:
+  - description: Hostname to be used for exposing Ratel UI"
+    displayName: Hostname
+    required: true
+    name: RATEL_HOST_NAME
+    value: "ratel-public-thoth-test-core.cloud.paas.psi.redhat.com"
+
+objects:
+  - apiVersion: v1
+    kind: Service
     metadata:
+      name: ratel-public
       labels:
         app: dgraph
         component: ratel
     spec:
-      containers:
-      - name: ratel
-        image: dgraph
-        ports:
-        - containerPort: 8000
-        command:
-          - dgraph-ratel
+      type: LoadBalancer
+      ports:
+      - port: 8000
+        targetPort: 8000
+        name: ratel-http
+      selector:
+        app: dgraph
+        component: ratel
+
+  - apiVersion: route.openshift.io/v1
+    kind: Route
+    metadata:
+      labels:
+        app: dgraph
+        component: ratel
+      name: ratel-public
+    spec:
+      host: "${RATEL_HOST_NAME}"
+      port:
+        targetPort: ratel-http
+      to:
+        kind: Service
+        name: ratel-public
+        weight: 100
+      wildcardPolicy: None
+
+  - apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: ratel
+      labels:
+        app: dgraph
+        component: ratel
+    spec:
+      selector:
+        matchLabels:
+          app: dgraph
+          component: ratel
+      template:
+        metadata:
+          labels:
+            app: dgraph
+            component: ratel
+        spec:
+          containers:
+          - name: ratel
+            image: dgraph
+            ports:
+            - containerPort: 8000
+            command:
+              - dgraph-ratel
